# allemande

./: .eslintrc.json  .gitignore  LICENSE  Makefile  README.md  access.crit  allemande-deps  allychat  apt.equivs  assistant  assistant.py  asyncify.py  audio_view.py  away.pl  barbarella.py  barbie.bb  bb  bb-voice-1.sh  bb-voice-2.sh  bbv  canon.py  chat.vim  claude-agent-ideas.txt  common.txt  config.yaml  core.py  core.sh  current.md  debian-allemande-deps.txt  debian-deps  debian-packages.txt  debian-requirements.txt  demo.md  diarize.sh  editing  email-setup.md  env.sh  err_with_llm_py.txt  gemini_vision.md  gemma-agent-ideas.txt  (+44 more)
adm/: allemande-install  allemande-uninstall  allemande-user-add  allemande_install.sh  allemande_uninstall.sh  allemande_user_add.sh  ally_commit.sh  ally_core_start.sh  ally_core_stop.sh  ally_mount  ally_mount.sh  ally_who.sh  bb2html.py  cat_agent_summaries.sh  cat_user.sh  convert_ally1.sh  crontab  crowdsec_whitelist_ssh_client.sh  haproxy_update.sh  mount_extra.sh  move_contrib.sh  move_contrib_2.sh  nginx_build_with_jwt.sh  nginx_update.sh  remote_user.crit  remote_user.sh  remote_user_add.sh  remote_user_audit.sh  remote_user_chroot.sh  remote_user_del.sh  remote_user_firewall.sh  remote_user_firewall_test.sh  remote_user_setup.sh  remote_user_startup.sh  remote_user_todo.txt  remove_empty_dirs_from_rooms.sh  remove_old_images_from_rooms.sh  remove_old_media_from_rooms.sh  restart_haproxy.sh  restart_nginx.sh  (+46 more)
agents/: Aetheria.yml  Akane.yml  Ally.yml  Amir.yml  Atla.yml  Barbie.yml  Bast.yml  Big Bird.yml  Bigi.yml  Bilda.yml  Boni.yml  Borat.yml  Brie.yml  Buffy.yml  Cal.yml  Callam.yml  Chaz.yml  Claude.yml  Clauden.yml  Cleo.yml  Clia.yml  Clu.yml  Coni.yml  Cookie.yml  Dali.yml  Dante.yml  Dav.yml  Dese.yml  Deseri.yml  Dily.yml  Dogu.yml  Donald Trump.yml  Eira.yml  Ellie.yml  Elmo.yml  Elon Musk.yml  Emm.yml  Emmie.yml  Emmy.yml  Eva.yml  (+157 more)
alias/: W  Wp  a1111  ac  ad  ad+  c  catpg  catu  ce  ci  clone  cpcmp  cr  crit  cw  cx  cx-  cxb  dan  dfh  eo  f  fl  flt  forge  gcf  gcg  gd  gds  gvd  hh  hhh  hide  i  jf  jfl  ki  kia  last  (+53 more)
ally/: __init__.py  aio.py  aio_coros.py  aio_old.py  aio_test.py  archive.py  bsearch.py  cache.py  debug.py  error.py  error2.py  filer.py  flock.py  generic.py  geput.py  lazy.py  lints  llms.py  logs.py  main.pm  main.py  meta.py  old.py  opts.py  (+18 more)
future/: add-hashbang.ipynb  add-hashbang.py  ai_coding.sh  alla.py  async_benchmark.py  autopsy.py  catt.py  chrome_tabs.sh  context  copilot-suggestions-helposaurus  core.py  diffn.md  diffn.py  diffn.py.crit  llm_git_commit_notquite.py  make-alternatives.md  model-specific-speech-filters.sh  name-terminal-fancy  pronounceable.py  proxy.py  pyproject.toml  ref.py  sentences.js  sentences.py  style.py  sub2.pl  upset.py  wg.py  xio.py
future/hello/: fixed.md  fixes.md  hello2.py  ideas-orig.md  ideas.md
future/streams/: StringIteratorIO.md  asyncio_queues.py  buffering.md  demo.py  demo2.py  queues.py  streams.py
mdformat-light-touch/: LICENSE  README.md  pyproject.toml  tox.ini
mdformat-light-touch/mdformat_light_touch/: __init__.py  plugin.py
mdformat-light-touch/tests/: test_fixtures.py
(+3986 files in other folders)
