[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "allemande"
version = "0.1"
authors = [
    {name = "Sam Watkins", email = "sam@allemande.ai"},
]
description = "Allemande AI Toolkit"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sswam/allemande"
"Bug Tracker" = "https://github.com/sswam/allemande/issues"
