[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barbarella"
version = "1"
authors = [
	{ name="Sam Watkins", email="sam@ucm.dev" },
]
description = "AI Chat System"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sswam/barbarella"
"Bug Tracker" = "https://github.com/sswam/barbarella/issues"
